--- a/scss/elements/_gameH.scss
+++ b/scss/elements/_gameH.scss
@@ -178,6 +178,31 @@
             }
         }
     }
+    &_headerCatalog {
+        opacity: 0;
+        transform: translateY(-10px);
+        transition: .2s;
+    }
+    &_open {
+        // transition: .2s;
+        opacity: 1;
+        transform: translateY(0px);
+        &:nth-child(1) {
+            transition-delay: 0s;
+        }
+        &:nth-child(2) {
+            transition-delay: .05s;
+        }
+        &:nth-child(3) {
+            transition-delay: .1s;
+        }
+        &:nth-child(4) {
+            transition-delay: .2s;
+        }
+        &:nth-child(5) {
+            transition-delay: .25s;
+        }
+    }
 
     &:hover &{
         &__banner {
