--- a/scss/elements/_inputList.scss
+++ b/scss/elements/_inputList.scss
@@ -86,20 +86,21 @@
 
                 // scrollbar-width: thin; /* auto | thin | none */
                 // scrollbar-color: rgba(255, 255, 255, .15) rgba(0, 0, 0, .15);
-                &::-webkit-scrollbar {
-                    width: 8px;
-                }
-                &::-webkit-scrollbar-track {
-                    background: rgba(0, 0, 0, .15); /* Цвет фона трека */
-                    border-radius: 10px;
-                }
-                &::-webkit-scrollbar-thumb {
-                    background: rgba(255, 255, 255, .15); /* Цвет ползунка */
-                    border-radius: 10px;
-                    &:hover {
-                        background: rgba(255, 255, 255, .2);
-                    }
-                }
+                // &::-webkit-scrollbar {
+                //     width: 8px;
+                // }
+                // &::-webkit-scrollbar-track {
+                //     background: rgba(0, 0, 0, .15); /* Цвет фона трека */
+                //     border-radius: 10px;
+                // }
+                // &::-webkit-scrollbar-thumb {
+                //     background: rgba(255, 255, 255, .15); /* Цвет ползунка */
+                //     border-radius: 10px;
+                //     &:hover {
+                //         background: rgba(255, 255, 255, .2);
+                //     }
+                // }
+                @include base.style-webkit_scrollbar;
                 &__point {
                     position: relative;
                     padding-left: 10px;
